# cargo-sms-alert-system

./: .env.example  .env.infobip  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_auth.py  test_package_crud.py  test_sms_integration.py  test_status_update.py
alembic/: env.py
alembic/versions/: 968df7c9cd79_initial_migration_create_all_tables.py
app/: create_test_user.py  main.py
app/api/routes/: admin.py  auth.py  packages.py  reports.py
app/core/: config.py  database.py  security.py  sms_service.py
app/models/: __init__.py  audit.py  message_template.py  package.py  user.py  warehouse.py
app/schemas/: __init__.py  package.py
docker/: Dockerfile  init-db.sql
